--- a/CSS/small.css
+++ b/CSS/small.css
@@ -23,6 +23,10 @@
         padding:0;
         margin:0;
     }
+
+    .flex-box {
+        width: 100%;
+    }
 }
 
 @media only screen and (max-width:960px) {
